[gd_scene load_steps=11 format=3 uid="uid://bwv15aawmtw4i"]

[ext_resource type="Script" path="res://Carpeta Corazones/pocion.gd" id="1_4gigc"]
[ext_resource type="Texture2D" uid="uid://clnetbfm3iam2" path="res://Carpeta Cartas/Escena Carta/Assets/pocion.png" id="1_ksq8t"]
[ext_resource type="Texture2D" uid="uid://cusljdu24jip" path="res://Carpeta Cartas/Escena Carta/Assets/sombra.png" id="2_hcuyl"]
[ext_resource type="Texture2D" uid="uid://fw1ih88lccr8" path="res://Carpeta Cartas/Escena Carta/Assets/Fire Effect and Bullet 16x16.png" id="2_kiy18"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o5unf"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_g7n2m"]
radius = 27.0185

[sub_resource type="AtlasTexture" id="AtlasTexture_vdyqa"]
atlas = ExtResource("2_kiy18")
region = Rect2(568, 154, 3, 3)

[sub_resource type="Animation" id="Animation_771jq"]
resource_name = "aparecer"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sombra:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.176471, 0.176471, 0.176471, 0), Color(0.176471, 0.176471, 0.176471, 0), Color(0.176419, 0.176419, 0.176419, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pocion:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D2:amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CPUParticles2D:amount")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CPUParticles2D:speed_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [10.0, 1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CPUParticles2D2:speed_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [10.0, 1.0]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_play_levitamiento"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CPUParticles2D:spread")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_64ian"]
resource_name = "levitamiento"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pocion:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sombra:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.55, 0.5), Vector2(0.5, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4chrs"]
_data = {
"aparecer": SubResource("Animation_771jq"),
"levitamiento": SubResource("Animation_64ian")
}

[node name="ParentPocion" type="CharacterBody2D" groups=["Pocion"]]
script = ExtResource("1_4gigc")

[node name="area_pocion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_pocion"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_o5unf")

[node name="area_acercamiento" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="area_acercamiento"]
position = Vector2(-1, 3)
shape = SubResource("CircleShape2D_g7n2m")

[node name="Sombra" type="Sprite2D" parent="."]
modulate = Color(0.176471, 0.176471, 0.176471, 0)
position = Vector2(1, 5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_hcuyl")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
skew = -0.829031
amount = 2
speed_scale = 10.0
texture = SubResource("AtlasTexture_vdyqa")
emission_shape = 1
emission_sphere_radius = 4.0
spread = 180.0
gravity = Vector2(0, -1)
scale_amount_min = 0.5
scale_amount_max = 0.7
color = Color(1, 1, 0, 1)

[node name="Pocion" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_ksq8t")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4chrs")
}
autoplay = "aparecer"

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
skew = -0.829031
amount = 2
speed_scale = 10.0
texture = SubResource("AtlasTexture_vdyqa")
emission_shape = 1
emission_sphere_radius = 4.0
spread = 180.0
gravity = Vector2(0, -1)
scale_amount_min = 0.5
scale_amount_max = 0.7
color = Color(1, 1, 0, 1)

[connection signal="body_entered" from="area_pocion" to="." method="_on_area_pocion_body_entered"]
[connection signal="body_entered" from="area_acercamiento" to="." method="_on_area_acercamiento_body_entered"]
[connection signal="body_exited" from="area_acercamiento" to="." method="_on_area_acercamiento_body_exited"]
